--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
+    
    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+     <link rel="stylesheet" href="src/styles.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -15,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/styles.css" />
+  
     <script
       src="https://kit.fontawesome.com/2a649c2d70.js"
       crossorigin="anonymous"
@@ -75,7 +77,7 @@
             <li>
               <span class="temperature" id = "temperature"> </span> 
               <span class="units">
-                <a href="#" id="celsius-link">°C</a> |
+                <a href="#" id="celsius-link" class= "active">°C</a> |
                 <a href="#" id="fahrenheit-link">°F</a>
               </span>
             </li>
